Fixed: initial conditions not created whith spaces in project name